# nautobot-api-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml
nautobot_api_sandbox/: class_refactor.py  click_ui.py  nauto_demo_functions.py  nautobot_api_sandbox_ui.py  ui_refactor.py
nautobot_api_sandbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_functions.py  test_nauto_sandbox.py  test_ui.py
