[tool.poetry]
name = "nautobot_api_sandbox"
version = "0.1.5"
description = "This is just a simple program to test my programing knowledge and to learn more about API and Nautobot."
authors = ["tPayne0647"]
readme = "README.md"
packages = [{include = "nautobot_api_sandbox"}]

[tool.poetry.scripts]
nautobot_api_sandbox = "nautobot_api_sandbox.nautobot_api_sandbox_ui:user_interface"
nauto_click = "nautobot_api_sandbox.click_ui:main"

[tool.poetry.dependencies]
python = "^3.9"
pynautobot = "1.5.0"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pytest = "7.4.0"
nautobot-api-sandbox-clickui =  "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
